rust-core/build_error_final.txt
cargo :     Checking superbook-pdf v0.1.0 (C:\Users\sfuru\Documents\Rust_DN_Sup
erBook_PDF_Converter\rust-core)
発生場所 行:1 文字:132
+ ... .cargo\bin;C:\msys64\mingw64\bin;$env:PATH"; cargo check 2>&1 | Out-F ...
+                                                  ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking su...rter\rust-core) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0053]: method `execute` has an incompatible type for trait
   --> src\ai_bridge.rs:925:1
    |
925 | #[async_trait]
    | ^^^^^^^^^^^^^^ expected trait `Any + Send + Sync`, found trait `Any`
    |
note: type in trait
   --> src\ai_bridge.rs:494:5
    |
494 | /     async fn execute(
495 | |         &self,
496 | |         tool: AiTool,
497 | |         input_files: &[PathBuf],
498 | |         output_dir: &Path,
499 | |         tool_options: &(dyn std::any::Any + Send + Sync),
500 | |     ) -> Result<AiTaskResult>;
    | |______________________________^
    = note: expected signature `fn(&'life0 HttpApiBridge, AiTool, &'life1 _, &'
life2 std::path::Path, &'life3 (dyn Any + Send + Sync + 'static)) -> Pin<_>`
               found signature `fn(&'life0 HttpApiBridge, AiTool, &'life1 _, &'
life2 std::path::Path, &'life3 (dyn Any + 'static)) -> Pin<_>`

For more information about this error, try `rustc --explain E0053`.
error: could not compile `superbook-pdf` (lib) due to 1 previous error
